# xmhw

./: .codeclimate.yml  .gitignore  .travis.yml  AUTHORS  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: xmhw-conda.yml
conda/: .condarc  dev-environment.yml  enviroment.yml  environment.yml  meta.yaml  meta.yml  run_test_coverage.sh
docs/: block_average.rst  conf.py  dask.rst  detect.rst  frequency.rst  gettingstarted.rst  index.rst  install.rst  starting.rst  threshold.rst  xmhw_demo.ipynb  xmhw_demo.py
test/: test_features.py  test_identify.py  test_stats.py  test_xmhw.py  xmhw_fixtures.py
test/testdata/: land.nc  oisst_2003_2004.nc  test_clim_oisst.nc  test_clim_oisst_nosmooth.nc
tests/: test_detail.py  test_features.py  test_helpers.py  test_identify.py  test_mhw.py  test_stats.py  test_xmhw.py  xmhw_fixtures.py
tests/testdata/: relthreshnorm.nc  test_clim_oisst.nc  test_clim_original.nc
workflows/: enviroment.yml  xmhw-conda.yml
xmhw/: detail.py  exception.py  features.py  helpers.py  identify.py  stats.py  xmhw.py
