[metadata]
name = xmhw 
author = Paola Petrelli
author_email = paola.petrelli@utas.edu.au
summary = 'marine heatwave detection code using xarray' 
description_file = README.rst
licence = 'Apache 2.0'
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7

[files]
packages = 
    xmhw 
#package-data =
#    mhw = data/*json

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
    setup.py
    tests

[extras]
# Optional dependencies
dev = 
    pytest
    sphinx

[entry_points]
#console_scripts =

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[tool:pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore docs/conf.py
