[metadata]
name = xmhw 
author = Paola Petrelli
author_email = paola.petrelli@utas.edu.au
summary = 'Marine heatwave detection code using xarray' 
description_file = README.rst
licence = 'Apache 2.0'
keywords = 'heatwave'
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9 

[options]
install_requires=
    xarray
    numpy
    pandas
    dask

python_requires=
    '3.6.9'

[files]
packages = 
    xmhw 

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
    setup.py
    test

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[tool:pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore docs/conf.py
